side menu icons added. fix: center-alignment

--- a/flex_style.css
+++ b/flex_style.css
@@ -17,6 +17,16 @@
 #sideMenu{
 	flex-basis:10px;
 	background-color:red;
+	list-style:none;
+	display:flex;
+	flex-direction:column;
+	justify-content:space-around;
+	align-items:flex-end;
+}
+.sideMenuIcon{
+	flex-basis:4px;
+	background-color:black;
+	
 }
 #charterTracks{
 	flex-grow:1;
